k8s/ingress-prod/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: api-homebase-ingress-service-prod
  annotations:
    kubernetes.io/ingress.class: 'nginx'

    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'

    # Certificate config
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
    - hosts:
        - api.homebase.vandersangen.dev
      secretName: api-homebase-vandersangen-dev
  rules:
    - host: api.homebase.vandersangen.dev
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: homebase-backend-cluster-ip-phpfpm
                port:
                  number: 80
